[package]
name = "motor-driver-hal"
description = "motor-driver using embedded-hal for linux"
homepage = "https://github.com/garfield0xff"
version = "0.1.3"
authors = ["Garfield0xff <garfield0xff@gmail.com>"]
edition = "2021"
repository = "https://github.com/garfield0xff/motor-driver-hal"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["embedded-hal","motor-driver","hal"]
categories = ["embedded"]

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"
rppal = { version = "0.22.0", optional = true }
linux-embedded-hal = { version = "0.4.0", optional = true }

[features]
default = ["std"]
std = []
rppal = ["dep:rppal", "std"]
linux-embedded-hal = ["dep:linux-embedded-hal", "std"]
