[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_motor"
path = "src/bin/basic_motor.rs"

[[bin]]
name = "encoder_monitor"
path = "src/bin/encoder_monitor.rs"

[[bin]]
name = "speed_control"
path = "src/bin/speed_control.rs"

[[bin]]
name = "direction_control"
path = "src/bin/direction_control.rs"

[[bin]]
name = "brake_test"
path = "src/bin/brake_test.rs"


[dependencies]
motor-driver-hal = { path = "..", features = ["rppal"] }
rppal = "0.22.0"
embedded-hal = "1.0.0"

# STM32 dependencies - uncomment for your STM32 family
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103", "medium"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
