[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_motor"
path = "src/bin/basic_motor.rs"

[[bin]]
name = "brake_test"
path = "src/bin/brake_test.rs"

[[bin]]
name = "direction_control"
path = "src/bin/direction_control.rs"

[[bin]]
name = "encoder_monitor"
path = "src/bin/encoder_monitor.rs"

[[bin]]
name = "speed_control"
path = "src/bin/speed_control.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"


[dependencies]
motor-driver-hal = { path = "..", features = ["rppal"] }
rppal = "0.22.0"
embedded-hal = "1.0.0"
ctrlc = "3.4"
